added score update and animation

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button>Let's Play</button>
          </div>
          <div class="match fade-out">
+            <h3>Refresh to Restart</h3>
             <div class="score">
                <div class="player-score">
                   <h2>Player</h2>
@@ -25,7 +26,7 @@
                   <p>0</p>
                </div>
             </div>
-            <h2 class="winner">Choose an option</h2>
+            <h2 class="status">Choose an option</h2>
             <div class="hands">
                <img src="./img/rock.png" alt="" class="player-hand">
                <img src="./img/rock.png" alt="" class="computer-hand">
