--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h3>Refresh to Restart</h3>
             <div class="score">
                <div class="player-score">
-                  <h2>Player</h2>
+                  <h2>You</h2>
                   <p>0</p>
                </div>
                <div class="computer-score">
